# Cpp_Playground

./: CMakeLists.txt
10.4_Iterators/: CMakeLists.txt  insert_iterator.cpp
memset.struct/: CMakeLists.txt  memset.cpp
omp.data_sharing/: CMakeLists.txt  lastprivate.cpp  private.cpp  shared.cpp
omp.exercise/: CMakeLists.txt  numerical_integral.cpp  prod_cons.cpp
omp.initializer/: CMakeLists.txt  graph.cpp  graph.h  init.cpp  init.h
omp.parallel/: CMakeLists.txt  for.cpp  parallel.cpp  reduction_sum.cpp  vec.cpp
omp.reduction/: CMakeLists.txt  basic.cpp  bug.c  custom_cls.cpp  reductpar.cpp  stdvec.cpp  sum.cpp
omp.task/: CMakeLists.txt  basic.cpp  task.fib.cpp  task.link.c
printable/: CMakeLists.txt  escape_sequence.cpp
regex/: CMakeLists.txt  regex.match.cpp
std.iterator/: CMakeLists.txt  iter.cpp  iterbug.cpp  list1old.cpp  list2old.cpp  list3old.cpp
std.transform/: CMakeLists.txt  basic.cpp  custom_cls.cpp  omp.cpp
std.unordered_map/: CMakeLists.txt  unordered_map.cpp
stl.bind/: CMakeLists.txt  bind.1.cpp
str/: CMakeLists.txt  find.cpp
utils/: print.h
