FIND_PACKAGE(OpenMP)
if (OPENMP_FOUND)
    message("OPENMP FOUND")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif ()
include_directories(SYSTEM ${OpenMP_INCLUDE_PATH})

add_executable(omp.data_sharing.firstprivate firstprivate.cpp)
add_executable(omp.data_sharing.lastprivate lastprivate.cpp)
add_executable(omp.data_sharing.private private.cpp)
add_executable(omp.data_sharing.shared shared.cpp)