find_package(OpenMP)
if (OPENMP_FOUND)
    message("OPENMP FOUND")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif ()
include_directories(SYSTEM ${OpenMP_INCLUDE_PATH})

add_executable(omp.reduction.basic basic.cpp)
add_executable(omp.reduction.reductpar reductpar.cpp)
add_executable(omp.reduction.sum sum.cpp)
add_executable(omp.reduction.custom_cls custom_cls.cpp)

add_executable(omp.reduction.stdvec stdvec.cpp)
add_executable(omp.reduction.bug bug.c)